# pyflichub-tcpclient

./: .gitignore  AGENTS.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  requirements_test.txt  setup.cfg  setup.py  tcpserver.js
.github/: release-drafter.yml
.github/workflows/: codeql-analysis.yml  pythonpublish.yml  test.yml
docs/: events.md
pyflichub/: button.py  client.py  command.py  event.py  flichub.py  network.py  server_command.py  server_info.py  twist_controller.py  updater.py
tests/: test_client.py  test_dummy.py  test_ir_logic.py  test_twist_controller.py  test_updater.py
