[metadata]
name = pyflichub-tcpclient
author = Johan Nenzén
author_email = johan.nanzen@gmail.com
description = Asynchronous Python TCP Client for FlicHub
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JohNan/pyflichub-tcpclient
project_urls =
    Bug Tracker = https://github.com/JohNan/pyflichub-tcpclient/issues
license = MIT
classifiers =
    Framework :: AsyncIO
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules

[options]
install_requires =
    pyhumps
    async-timeout
package_dir =
    = .
packages = find:
python_requires = >= 3.7

[options.packages.find]
where = .
exclude =
    tests
    tests.*

[flake8]
# To work with Black
# E501: line too long
# W503: Line break occurred before a binary operator
# E203: Whitespace before ':'
# D202 No blank lines allowed after function docstring
# W504 line break after binary operator
ignore =
    E722,
    I201,
    W503,
    CFQ001,
    CFQ002,
    E501,
    W503,
    E203,
    D202,
    W504

filename =
    *.py

exclude =
    .git,
    __pycache__,
    *.txt,
    *.md,
    *.cfg

max_line_length = 120
count = True
inline_quotes = double
show_source = True
statistics = True

[pycodestyle]
max_line_length=120
statistics = True
ignore = E722
count = True
verbose = True
show_source = True